--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-query": "^3.39.3",
     "swagger-ui-dist": "^5.20.1",
     "swagger-ui-react": "^5.20.1",
+    "sweetalert2": "^11.17.2",
     "zod": "^3.24.2",
     "zustand": "^4.4.7"
   },
