--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.6.2",
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.0",
+    "cloudinary": "^2.6.1",
     "date-fns": "^2.30.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.482.0",
